# AstroSpectro

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  app.py  debug_gspphot.py  draft_Neri.ipynb  main.py  pyproject.toml  requirements.txt  valid_plan_urls.csv
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: deploy.yml
data/catalog/: downloaded_plans.csv  trained_spectra.csv
data/processed/: features_20250702T004557Z.csv
docs/: index.md
notebooks/: 00_master_pipeline.ipynb  01_download_spectra.ipynb  02_tools_and_visuals.ipynb  03_feature_optimization.ipynb  03_scientific_validation.ipynb  04_shap_interpretability.ipynb
notebooks/dimred/: dimred_features_retained_183.csv  phy3500_01_pca.ipynb  phy3500_02_umap_tsne.ipynb  phy3500_03_autoencoder.ipynb
scripts/: clean.ps1  clean.sh  setup.ps1  setup.sh
src/: utils.py
src/dimred/: __init__.py  autoencoder.py  data_loader.py  dimred_visualizer.py  embedding.py  hdbscan_analyzer.py  pca_analyzer.py  run_reporter.py  xgboost_bridge.py
src/pipeline/: classifier.py  feature_engineering.py  master (1).py  master.py  peak_detector.py  preprocessor.py  processing.py  wandb_config.py
src/tools/: dataset_builder.py  dr5_downloader.py  gaia_crossmatcher.py  generate_catalog_from_fits.py  spectra_manager.py  visualizer.py
website/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/blog/: 2025-07-15-achèvement-de-la-documentation-alpha.mdx  2025-07-22-premier-partage-de-résultat.mdx  2025-07-23-refonte-visualisation-astrospectro.mdx  2025-07-24-anatomie-pipeline-dia-astrophysique.mdx  2025-08-01-de-32-a-84-pourcent-classifieur-stellaire.mdx  authors.yml
website/docs/: contributing.md  intro.md  intro.mdx  roadmap.md
website/docs/api/: classifier.mdx  feature-engineer.mdx  index.mdx  preprocessor.mdx
website/docs/community/: acknowledgments.md  acknowledgments.mdx  citing.mdx  contributing.mdx  faq.mdx  index.md  index.mdx  roadmap.md  roadmap.mdx
website/docs/concepts/: classifier-module.md  feature-engineering-theory.md  feature-engineering-theory.mdx  feature-module.md  index.md  index.mdx  pipeline-overview.md  (+4 more)
(+82 files in other folders)
